# jist

./: .gitignore  Cargo.toml  README.md  build.rs
benchmarking/: Cargo.toml  gen.py
benchmarking/src/: lib.rs  main.rs
src/: buf_parser.rs  gzip_poc.rs  lib.rs  main.rs  parse_all.rs  parse_top_level.rs  schema_parser.rs  schema_stream_parser.rs  simd_parser.rs  split_parser.rs  utils.rs
src/model/: j_struct_tracker.rs  mod.rs  stream_tracker.rs
src/simdjson/: simdjson.cpp  wrapper.cpp  wrapper.h
