[package]
name = "jist"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
regex = "1.10.6"
lazy_static = "1.5.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
json-tools = "*"
log = "0.4.22"
flate2 = "1.0.34"
env_logger = "0.11.5"
bgzip = "0.3.1"